--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
         <map name="cover_img">
           <area
             shape="rect"
-            coords="543,238,58,604"
+            coords="335,270,460, 370"
             href="./member/18120516/18120516.html"
-            alt="18120516"
+            alt="18120516 - Hồ Trọng Phương"
+            title="18120516 - Hồ Trọng Phương"
           />
           <area
             shape="rect"
-            coords="1002,604,560,237"
+            coords="500,260,660,380"
             href="./member/19120272/19120272.html"
-            alt="19120272"
+            alt="19120272 - Nguyễn Sĩ Liêm"
+            title="19120272 - Nguyễn Sĩ Liêm"
           />
         </map>
-        <p>Click on us to see more info</p>
+        <p>Click on our face to see more info</p>
       </div>
     </div>
   </body>
